--- a/content/post/2020-05-16-week-two.md
+++ b/content/post/2020-05-16-week-two.md
@@ -2,7 +2,7 @@
 authors = [
     "Chantal Brousseau",
 ]
-title = "Week Four: Close Encounters of a Historical Kind"
+title = "Week Two: Fail-error"
 date = "2020-05-16"
 # tags = ["tech", "github", "ocr", "digital-history", "R"]
 images = [
