--- a/content/post/2020-06-01-week-four.md
+++ b/content/post/2020-06-01-week-four.md
@@ -32,9 +32,9 @@ It's still not perfect&mdash; I'm still a beginner in R&mdash; but you can still
 
 A good tool indeed! From the initial video we watched, Voyant was appealing in its numerous ways to analyze and visualize data, making it feel very accessible. Despite my dislike for overcrowded or busy GUIs, I wasn't pleasantly surprised to find that I felt it wasn't a problem in Voyant despite the 4 different panes of information. I did have some error using it; I wasn't able to fetch the data we were supposed to use for the initial exercise via URL, so I had to download and upload the file. But then when I tried to modify the table settings to control what was inputted, the table settings refused to apply. Voyant being a niche tool meant that googling my problem lead to no resolutions, thus I succumbed to using the provided link to the already created corpus.
 
-
-<iframe style='width: 585px; height: 429px;' src='https://voyant-tools.org/tool/Trends/?stopList=keywords-48494022f1e3219a2d57bb9fdc1eb914&query=new&query=country&query=mr&query=great&query=%C3%A4%C3%AC&corpus=ea1868d7f1fbece8f0f5538c23a3128e'></iframe>
-
+<div class="resp-container">
+  <iframe class="resp-iframe" src='https://voyant-tools.org/tool/Trends/?stopList=keywords-48494022f1e3219a2d57bb9fdc1eb914&query=new&query=country&query=mr&query=great&query=%C3%A4%C3%AC&corpus=ea1868d7f1fbece8f0f5538c23a3128e'></iframe>
+</div>
 
 The data used in this corpus was meant to analyze the ways British newspapers framed Britain’s relationship with its colonies, and from what I know about colonial Britain, I predicted that there would be data that demonstrated some form of exotification of their colonies, expansion of Empire with lesser regard to people living on sought out lands, and/or the "civil/savage" narrative reinforced in some way. I looked through the data and noticed that there seemed to be a couple of non-words extracted from the set, which brought me to the stoplist function where I could add my own stopwords&mdash; never having heard of stopwords prior to this, I'm saddened by all this time never having known about such a useful function! It's like a GUI-based .gitignore file! I wish the pane for viewing stopwords in Voyants was larger, but I was still able to exclude for matters such as "äì" from my visualizations, and find that my predictions about this data may have been correct, as the highest trending words were all descriptions of nation or grandeur, though I would need to perform a closer reading to further confirm what I assumed.
 
