--- a/content/post/2020-06-08-week-five.md
+++ b/content/post/2020-06-08-week-five.md
@@ -12,6 +12,30 @@ images = [
 ]
 +++
 
+You are presently reading a post on a website that almost didn't exist. This week of telling compelling stories through design started off strong for me-- a focus on aesthetics for someone whose primary interest in terms of programming is web design is guaranteed to be a hit! I learned about a handful of new, interesting tools that can be used to represent data through mapping, create simple colour palettes for visualizing data, and go MUCH more familiar with Adobe Illustrator. When it came to moving my static site from Jekyll to Hugo though... that's when things got a bit hairy.
+
+### Mapping & Making
+
+As soon as I went through the weekly "readings", I immediately knew I wanted to know more about mapping. Looking through the DH Awards for Data Visualization, the winning visualization from the University of Edinburgh that [mapped out the places of residence of accused witches](https://witches.is.ed.ac.uk) was truly a compelling piece. I spent 30mins just clicking through the small, woodblock-esqe icons, wanting to know more about all of the accused. I then wanted to know more about how something like this could be created-- and luckily, it was a topic for this week!
+
+The first endeavour into creating a narrative with maps was using StorymapJS, and to be honest, I wasn't much of a fan of this tool. I think it certainly has its merits, as it was easy to use and would be good for presenting a simple historical narrative, but the slideshow sort of styling I found to be a bit cluttered and not very visually appealing. It seemed to easy to fall into the fallacy of over-writing and making a very text heavy map (even I think I fell into this trap...). About two years ago, I was in a class that collaborated with the NCC, in which me and my team created a wrap for a traffic box that conveyed one of Ottawa's many histories. The topic we chose ([and that the NCC used](https://capitalhistory.ca/uncategorized/malak-karsh/)) was to share the life of Ottawa photographer Malak Karsh, also known for creating the Tulip Festival. Thanks to this project, I know *a lot* about his life-- a life full of travel-- thus I decided to make a quick map using the StorymapJS tool to construct his history into a visual narrative using his photos to mark locations.
+
+<div class="resp-container">
+  <iframe class="resp-iframe" src="https://uploads.knightlab.com/storymapjs/11199eb89596bd6c6928fd1907b65354/unknown/index.html"></iframe>
+</div>
+
+I made some small creative decisions, such as using a tulip vector as the map marker, and I created what I thought StorymapJS was best used for-- telling a story through location. It would've been cool to make an even more detailed map with more locations for this specific project, so that if you zoomed out Canada could look like a whole tulip garden; but, I didn't want to spend ALL my time on this map when there was more maps to be made!
+
+
+
+
+- Not a huge fan of the powerpoint-esque styling --> feels cluttered
+- Making small map cataloguing life of Malak Karsh
+  - Did infobox for NCC on Malak Karsh and the tulip festival
+  - Very active life so I thought it would be fitting for a map
+- I like that you can customize map markers --> tulip for Malak
+- For blog:
+  - ```<iframe src="https://uploads.knightlab.com/storymapjs/11199eb89596bd6c6928fd1907b65354/unknown/index.html" frameborder="0" width="100%" height="800"></iframe>```
 
 
 ### Creation in Context
