--- a/content/post/2020-06-08-week-five.md
+++ b/content/post/2020-06-08-week-five.md
@@ -20,9 +20,7 @@ As soon as I went through the weekly "readings", I immediately knew I wanted to 
 
 The first endeavour into creating a narrative with maps was using StorymapJS, and to be honest, I wasn't much of a fan of this tool. I think it certainly has its merits, as it was easy to use and would be good for presenting a simple historical narrative, but the slideshow sort of styling I found to be a bit cluttered and not very visually appealing. It seemed to easy to fall into the fallacy of over-writing and making a very text heavy map (even I think I fell into this trap...). About two years ago, I was in a class that collaborated with the NCC, in which me and my team created a wrap for a traffic box that conveyed one of Ottawa's many histories. The topic we chose ([and that the NCC used](https://capitalhistory.ca/uncategorized/malak-karsh/)) was to share the life of Ottawa photographer Malak Karsh, also known for creating the Tulip Festival. Thanks to this project, I know *a lot* about his life-- a life full of travel-- thus I decided to make a quick map using the StorymapJS tool to construct his history into a visual narrative using his photos to mark locations.
 
-<div class="resp-container">
-  <iframe class="resp-iframe" src="https://uploads.knightlab.com/storymapjs/11199eb89596bd6c6928fd1907b65354/unknown/index.html"></iframe>
-</div>
+<iframe src="https://uploads.knightlab.com/storymapjs/11199eb89596bd6c6928fd1907b65354/unknown/index.html" frameborder="0" width="100%" height="800"></iframe>
 
 I made some small creative decisions, such as using a tulip vector as the map marker, and I created what I thought StorymapJS was best used for-- telling a story through location. It would've been cool to make an even more detailed map with more locations for this specific project, so that if you zoomed out Canada could look like a whole tulip garden; but, I didn't want to spend ALL my time on this map when there was more maps to be made!
 
