--- a/content/post/2020-06-08-week-five.md
+++ b/content/post/2020-06-08-week-five.md
@@ -24,16 +24,43 @@ The first endeavour into creating a narrative with maps was using StorymapJS, an
 
 I made some small creative decisions, such as using a tulip vector as the map marker, and I created what I thought StorymapJS was best used for-- telling a story through location. It would've been cool to make an even more detailed map with more locations for this specific project, so that if you zoomed out Canada could look like a whole tulip garden; but, I didn't want to spend ALL my time on this map when there was more maps to be made!
 
+The next mapping tool was Leaflet, and this seemed to be closer to what I was looking for-- closer to how the aforementioned map of witches was produced. There was a lot of what I would consider "technical" terms in the initial explanation of web maps, and as someone who's never touched this kind of thing before, I was left a bit confused, but still persistent. As the lesson went on and adding layers were explained, I gained the understanding I lacked before about how tiles work in a map (I think I was too hung up on the pyramid shape of the diagram...)! And although I found the Map Warper UI a bit difficult to navigate-- it felt similar to when you have too many tabs open at once-- georectifying the base map and adding a historical map as an overlay was so simple! This process also gave opportunity to look even more closely at the [historical map](https://collectionscanada.gc.ca/pam_archives/index.php?fuseaction=genitem.displayItem&rec_nbr=4139577&lang=eng&rec_nbr_list=1841760,4139577,1619464,5244586,1619462,1619463,1624270,1624271,1624031,1624032) I chose as an overlay, comparing it to how the shape and sprawl of Ottawa has evolved as I pinned each control point. I'll certainly be using this method of map creation in the future, and want to learn more so I can improve the appearance of my maps. Currently, my overlay is very low resolution and the animation of it appearing is somewhat choppy-- I'd like to experiment with solutions to create a better user experience.
+
+
+### Academia Arts
+
+I'll admit, when I first saw the topic of "Posters", I was NOT thinking of the kind of poster we ended up making for the lesson. I was drawn to the topic because I currently generate promotional content for the [CCSS](https://ccss.carleton.ca), and hoped that it might add something to my graphic design skill set. That's not to say it didn't! It certainly did! Just not in the way I expected it to. While the lessons were done in Inkscape, I chose to use Adobe Illustrator instead. I actually already had Inkscape installed because I once had to create a vector for some custom key caps I wanted made, but it's because of this that I know me and my computer don't get along with it. It has to be virtualized using XQuartz, which my computer hates and causes the application to lag, and because it's a Windows program it only accepts Windows shortcut keys, which REALLY messes with me.
 
 
 
-- Not a huge fan of the powerpoint-esque styling --> feels cluttered
-- Making small map cataloguing life of Malak Karsh
-  - Did infobox for NCC on Malak Karsh and the tulip festival
-  - Very active life so I thought it would be fitting for a map
-- I like that you can customize map markers --> tulip for Malak
-- For blog:
-  - ```<iframe src="https://uploads.knightlab.com/storymapjs/11199eb89596bd6c6928fd1907b65354/unknown/index.html" frameborder="0" width="100%" height="800"></iframe>```
+The simple activity of sprucing up a bar graph pdf already gave me a new understanding of Illustrator's grouping/ungrouping function, and using Colour Brewer I made a 5 colour palette to recolour the bars of graph. The focus of this activity was to learn to work with the given vector-based software, so I let it slide at that moment, but my colour "ranges" are technically inaccurate if you look at the legend.
+
+{{< figure src="/images/publication-year.png" class="respo-posts" >}}
+
+If you look closely, you'll notice one bar goes beyond the graph, yet the colour I assigned it is for bars that indicate a range of 40 to 50. I personally would have scaled this data differently so broader range could have been shown, but alas, this was a activity of modifying what you're given, so I moved on. The final change I made was to the fonts to differentiate between titles and labels, but this was essentially the same process as it is in Adobe Photoshop, a tool I'm *much* more familiar with.
+
+Now, what I'm used to making is event posters-- I'm not entirely sure if I've looked at or seen an academic poster before (or at least, for the humanities, anyway). They honestly remind me of those projects you did in elementary school, where you'd pick a topic, go to Dollarama and get a big ol' poster board, then go home and print pictures from Google and write small snippets about the topic that you would later print, cut, and glue to the poster board. Academic posters are the Big Kid version of that.
+
+I read through Purrington's notes and went to start the activity using the suggested Sangiorgi/Breuer designs, but a problem came up which was that I strongly disliked both of the given designs. Overall, I find both to be too "scientific"-- the designs don't capture the creativity of work in the humanities. They were clearly geared towards supporting lots of equations and visuizations of data, which may work for digital history, but since we were told make an academic poster for our favourite essay, and I have none that employed digital history devices, these designs felt irrlevant to me. A smaller note too was that, while I generally agree with Breuer's note on colour, I strongly disagree with his notion that posters **shouldn't** use flat colour. I KNEW his poster design was from ten years ago; at this point in time, gradients date his work while not adding much visual interest. Flat colour is fine for modern more minimalist design, and visual interest is generated numerous other ways, such as using contrasting palettes, by creating shadows for boxes, using small patterns for backgrounds with no text and translucent boxes for titles, etc. So that was basically a long way of me saying that rather than using a template, I referenced Purrington's notes for horizontal posters to make my own design. For consistency, because I mentioned it last week, I made the poster for my essay on the 19th century British perception of the waist.
+
+{{< figure src="/images/academicposter.pdf" class="respo-posts" >}}
+
+
+- Make an Academic Poster
+  - I hated all of the Ugo Sangiorgi/Felix Breuer designs --> too scientific, does not capture creativity of essay/humanities work
+    - I agree overall with Breuer's note on colour, but strongly disagree with his notion that posters should use flat colour
+      - Gradients (like what he used) made me KNOW his poster was from 2010
+      - Flat colour is fine for modern more minimalist design --> can be offset by creating shadows for boxes, using small pattern for bg with no texts + translucent boxes for titles, etc
+  - Making my own design based on Colin Purrington template + article --> because I mentioned it last week I'm going to make the poster about my essay on 19th century British perception of the waist
+  - 3 font combo: Fjalla One + Futura for titles and Baskerville font for body text
+  - There is no visuals in this essay so I added some fashion plates for visual interest --> I'm pretty sure making these took longer than the rest of the poster
+  - The more I work on this the more I realize that this is very difficult to do with an essay
+  - Who do I acknowledge??? --> I thanked the prof I wrote the essay for...
+  - Before I save this I'm going to update my site, then create a hidden page where the essay is published that I can link to on the poster
+  - Overall I don't like my poster (although I still like it more than the examples) --> too text heavy, perhaps would help if I've done more essays in my academic career that involved visuals in some way
+    - Aesthetically boring becuase of lack of visuals
+    - Colour palette could have been more fun but I couldn't find any palette generators that would create a palette from one colour that wasn't single-hue --> I'm bad at coordinating colours so I just stuck to making my own single-hue palette which is a bit boring
+
 
 
 ### Creation in Context
