--- a/content/post/2020-06-08-week-five.md
+++ b/content/post/2020-06-08-week-five.md
@@ -2,7 +2,7 @@
 authors = [
     "Chantal Brousseau",
 ]
-title = "Week Five: Digital Designs"
+title = "Week Five: Creation in Context"
 date = "2020-06-01"
 # tags = [
 #     "tech", "python", "digital-history", "R", "topic-modelling"
@@ -18,7 +18,7 @@ You are presently reading a post on a website that almost didn't exist. This wee
 
 As soon as I went through the weekly "readings", I immediately knew I wanted to know more about mapping. Looking through the DH Awards for Data Visualization, the winning visualization from the University of Edinburgh that [mapped out the places of residence of accused witches](https://witches.is.ed.ac.uk) was truly a compelling piece. I spent 30mins just clicking through the small, woodblock-esqe icons, wanting to know more about all of the accused. I then wanted to know more about how something like this could be created-- and luckily, it was a topic for this week!
 
-The first endeavour into creating a narrative with maps was using StorymapJS, and to be honest, I wasn't much of a fan of this tool. I think it certainly has its merits, as it was easy to use and would be good for presenting a simple historical narrative, but the slideshow sort of styling I found to be a bit cluttered and not very visually appealing. It seemed to easy to fall into the fallacy of over-writing and making a very text heavy map (even I think I fell into this trap...). About two years ago, I was in a class that collaborated with the NCC, in which me and my team created a wrap for a traffic box that conveyed one of Ottawa's many histories. The topic we chose ([and that the NCC used](https://capitalhistory.ca/uncategorized/malak-karsh/)) was to share the life of Ottawa photographer Malak Karsh, also known for creating the Tulip Festival. Thanks to this project, I know *a lot* about his life-- a life full of travel-- thus I decided to make a quick map using the StorymapJS tool to construct his history into a visual narrative using his photos to mark locations.
+The first endeavour into creating a narrative with maps was using StorymapJS, and to be honest, I wasn't much of a fan of this tool. I think it certainly has its merits, as it was easy to use and would be good for presenting a simple historical narrative, but the slideshow sort of styling I found to be a bit cluttered and not very visually appealing. It seemed to easy to fall into the fallacy of over-writing and making a very text-heavy map (even I think I fell into this trap...). About two years ago, I was in a class that collaborated with the NCC, in which me and my team created a wrap for a traffic box that conveyed one of Ottawa's many histories. The topic we chose ([and that the NCC used](https://capitalhistory.ca/uncategorized/malak-karsh/)) was to share the life of Ottawa photographer Malak Karsh, also known for creating the Tulip Festival. Thanks to this project, I know *a lot* about his life-- a life full of travel-- thus I decided to make a quick map using the StorymapJS tool to construct his history into a visual narrative using his photos to mark locations.
 
 <iframe src="https://uploads.knightlab.com/storymapjs/11199eb89596bd6c6928fd1907b65354/unknown/index.html" frameborder="0" width="100%" height="800"></iframe>
 
@@ -29,44 +29,33 @@ The next mapping tool was Leaflet, and this seemed to be closer to what I was lo
 
 ### Academia Arts
 
-I'll admit, when I first saw the topic of "Posters", I was NOT thinking of the kind of poster we ended up making for the lesson. I was drawn to the topic because I currently generate promotional content for the [CCSS](https://ccss.carleton.ca), and hoped that it might add something to my graphic design skill set. That's not to say it didn't! It certainly did! Just not in the way I expected it to. While the lessons were done in Inkscape, I chose to use Adobe Illustrator instead. I actually already had Inkscape installed because I once had to create a vector for some custom key caps I wanted made, but it's because of this that I know me and my computer don't get along with it. It has to be virtualized using XQuartz, which my computer hates and causes the application to lag, and because it's a Windows program it only accepts Windows shortcut keys, which REALLY messes with me.
+I'll admit, when I first saw the topic of "Posters", I was NOT thinking of the kind of poster we ended up making for the lesson. I was drawn to the topic because I currently generate promotional content for the [CCSS](https://ccss.carleton.ca), and hoped that it might add something to my graphic design skillset. That's not to say it didn't! It certainly did! Just not in the way I expected it to. While the lessons were done in Inkscape, I chose to use Adobe Illustrator instead. I actually already had Inkscape installed because I once had to create a vector for some custom keycaps I wanted to be made, but it's because of this that I know me and my computer don't get along with it. It has to be virtualized using XQuartz, which my computer hates and causes the application to lag, and because it's a Windows program it only accepts Windows shortcut keys, which REALLY messes with me.
 
-
-
-The simple activity of sprucing up a bar graph pdf already gave me a new understanding of Illustrator's grouping/ungrouping function, and using Colour Brewer I made a 5 colour palette to recolour the bars of graph. The focus of this activity was to learn to work with the given vector-based software, so I let it slide at that moment, but my colour "ranges" are technically inaccurate if you look at the legend.
+The simple activity of sprucing up a bar graph pdf already gave me a new understanding of Illustrator's grouping/ungrouping function, and using Colour Brewer I made a 5 colour palette to recolour the bars of the graph. The focus of this activity was to learn to work with the given vector-based software, so I let it slide at that moment, but my colour "ranges" are technically inaccurate if you look at the legend.
 
 {{< figure src="/images/publication-year.png" class="respo-posts" >}}
 
-If you look closely, you'll notice one bar goes beyond the graph, yet the colour I assigned it is for bars that indicate a range of 40 to 50. I personally would have scaled this data differently so broader range could have been shown, but alas, this was a activity of modifying what you're given, so I moved on. The final change I made was to the fonts to differentiate between titles and labels, but this was essentially the same process as it is in Adobe Photoshop, a tool I'm *much* more familiar with.
+If you look closely, you'll notice one bar goes beyond the graph, yet the colour I assigned it is for bars that indicate a range of 40 to 50. I personally would have scaled this data differently so broader range could have been shown, but alas, this was an activity of modifying what you're given, so I moved on. The final change I made was to the fonts to differentiate between titles and labels, but this was essentially the same process as it is in Adobe Photoshop, a tool I'm *much* more familiar with.
 
 Now, what I'm used to making is event posters-- I'm not entirely sure if I've looked at or seen an academic poster before (or at least, for the humanities, anyway). They honestly remind me of those projects you did in elementary school, where you'd pick a topic, go to Dollarama and get a big ol' poster board, then go home and print pictures from Google and write small snippets about the topic that you would later print, cut, and glue to the poster board. Academic posters are the Big Kid version of that.
 
-I read through Purrington's notes and went to start the activity using the suggested Sangiorgi/Breuer designs, but a problem came up which was that I strongly disliked both of the given designs. Overall, I find both to be too "scientific"-- the designs don't capture the creativity of work in the humanities. They were clearly geared towards supporting lots of equations and visuizations of data, which may work for digital history, but since we were told make an academic poster for our favourite essay, and I have none that employed digital history devices, these designs felt irrlevant to me. A smaller note too was that, while I generally agree with Breuer's note on colour, I strongly disagree with his notion that posters **shouldn't** use flat colour. I KNEW his poster design was from ten years ago; at this point in time, gradients date his work while not adding much visual interest. Flat colour is fine for modern more minimalist design, and visual interest is generated numerous other ways, such as using contrasting palettes, by creating shadows for boxes, using small patterns for backgrounds with no text and translucent boxes for titles, etc. So that was basically a long way of me saying that rather than using a template, I referenced Purrington's notes for horizontal posters to make my own design. For consistency, because I mentioned it last week, I made the poster for my essay on the 19th century British perception of the waist.
+I read through Purrington's notes and went to start the activity using the suggested Sangiorgi/Breuer designs, but a problem came up which was that I strongly disliked both of the given designs. Overall, I find both to be too "scientific"-- the designs don't capture the creativity of work in the humanities. They were clearly geared towards supporting lots of equations and visualizations of data, which may work for digital history, but since we were told make an academic poster for our favourite essay, and I have none that employed digital history devices, these designs felt irrelevant to me. A smaller note too was that, while I generally agree with Breuer's note on colour, I strongly disagree with his notion that posters **shouldn't** use flat colour. I KNEW his poster design was from ten years ago; at this point in time, gradients date his work while not adding much visual interest. Flat colour is fine for modern more minimalist design, and visual interest is generated numerous other ways, such as using contrasting palettes, by creating shadows for boxes, using small patterns for backgrounds with no text and translucent boxes for titles, etc. So that was basically a long way of me saying that rather than using a template, I referenced Purrington's notes for horizontal posters to make my own design. For consistency, because I mentioned it last week, I made the poster for my essay on the 19th century British perception of the waist.
 
 {{< figure src="/images/academicposter.pdf" class="respo-posts" >}}
 
-
-- Make an Academic Poster
-  - I hated all of the Ugo Sangiorgi/Felix Breuer designs --> too scientific, does not capture creativity of essay/humanities work
-    - I agree overall with Breuer's note on colour, but strongly disagree with his notion that posters should use flat colour
-      - Gradients (like what he used) made me KNOW his poster was from 2010
-      - Flat colour is fine for modern more minimalist design --> can be offset by creating shadows for boxes, using small pattern for bg with no texts + translucent boxes for titles, etc
-  - Making my own design based on Colin Purrington template + article --> because I mentioned it last week I'm going to make the poster about my essay on 19th century British perception of the waist
-  - 3 font combo: Fjalla One + Futura for titles and Baskerville font for body text
-  - There is no visuals in this essay so I added some fashion plates for visual interest --> I'm pretty sure making these took longer than the rest of the poster
-  - The more I work on this the more I realize that this is very difficult to do with an essay
-  - Who do I acknowledge??? --> I thanked the prof I wrote the essay for...
-  - Before I save this I'm going to update my site, then create a hidden page where the essay is published that I can link to on the poster
-  - Overall I don't like my poster (although I still like it more than the examples) --> too text heavy, perhaps would help if I've done more essays in my academic career that involved visuals in some way
-    - Aesthetically boring becuase of lack of visuals
-    - Colour palette could have been more fun but I couldn't find any palette generators that would create a palette from one colour that wasn't single-hue --> I'm bad at coordinating colours so I just stuck to making my own single-hue palette which is a bit boring
+Ta-da! If you really want to read it, you'll have to zoom in, but this was the result of my efforts. It's... pretty boring. There were no visuals for this essay, so I tried to make use of the Golden Ratio and dedicate a section to a group of cascading fashion plates, sorted from smallest to "largest" waistline. I felt it was a relevant visual, especially after someone reads the poster, and frankly, I needed something to ensure that this poster wouldn't just be blocks of text. And yet... it's still such a boring poster to me! There's so much text! I also think I should have used a more diverse colour palette rather than a single-hue one, It may have made all that text stand out more. This type of poster is definitely challenging for conveying a work that has no visual outcome or byproducts. It left me wondering, what IS the best way to "advertise" something like my essay? I still haven't come up with an answer...
 
 
+### Migration Mania
 
-### Creation in Context
+The most significant project I undertook this week is something I almost wasn't able to write about: the site you're one right now, reading this. In prior weeks, I've been publishing my journals to another static site, one that was created using Jekyll and deployed using GitHub Pages. It's been working fine, but I know that the more I post, the larger my Jekyll site gets which means that GitHub Pages will start taking longer to build my updates. At the encouragement of my Professor and the internet, I decided to try migrating my site to use Hugo and deploy with Netlify.
 
-What you found intriguing, compelling, and effective about the various sites and projects you explored this week. Tie what you find/observe to your own work.
-- Talk about overly wordy AMSE
+Hugo has extensive documentation via their website, which led to this process getting off to a great start! Installing Hugo was much easier than installing Jekyll, as Hugo didn't have any new dependencies I needed to install. A quick ```brew install hugo``` and I was one and done! I then found out about a command that supposedly would convert your Jekyll site to Hugo, ```hugo import jekyll jekyll-site-folder folder-for-hugo-site```, and so I gave that a shot too.
 
+"Wow, this is so easy!" she thought to herself (hint: she was wrong).
 
- Reflect on your design choices and the story you’re trying to tell, or the interesting thing you’ve found. Critically evaluate the thing(s) you’ve made; perhaps show them to someone outside of this course and ask for their feedback. Did they understand the point you were trying to make? What was effective, for them, and what was confusing?
+I opened up the folder for my Hugo site, and while I was happy to find all of the content from my website there, the actual code that made up the website was missing. And this is when it occurred to me that Ruby/Jekyll and Go/Hugo definitely have different syntax, so of course I could just directly port my styling. I liked my Jekyll site's theme though, so I decided to look in to just manually fixing the syntax. Some googling later and I also discovered the very different file structures that Jekyll and Hugo have. That makes things a bit more confusing, but no matter, I went on to modify my header HTML file. Even using regex, it took me 30 mins to alter one file, so it was at this point I decided to abandon ship and browse premade Hugo themes. [I found one](https://themes.gohugo.io/newsroom/) I liked, added it as a submodule, and went to set up a Netlify account to preview what my new site looked like! Netlify was easy to set up, especially when signing in via GitHub, but although I verified that I selected the correct repo and that the build command was correct, when I deployed my site, it was blank! I figured this was something with the theme, so I closed everything but my text editor, terminal, and one page to host the site locally to investigate further. This is when my Netlify account was locked for suspicious behaviour, and I was no longer able to access my account to deploy my site.
+
+You are seeing this only because customer support managed to manually review my case on this day at 11:13am and give me my account back. It turns out the flag was a false positive too! Customer support couldn't even figure out what caused my account to be flagged! Although the block was somewhat of a blessing, because in last night's wallowing I continued to work locally, couldn't fix my selected theme, and so took some time to find another one. [This theme](https://github.com/puresyntax71/hugo-theme-chunky-poster) is FILLED with extra features that you can enable/disable, but somehow still easier to navigate. In the process of tweaking the themes to my liking, I discovered that Hugo is kind of hard to work with. What I liked about Jekyll is that the structure is very flexible-- I was able to modify it to make it as cohesive as possible for ME and it would still publish and work correctly. Hugo seems to have a rather strict file structure, and the way themes are implemented as submodules makes the files even more confusing to navigate. I'm honestly still figuring it out, which is why this web page isn't currently actually how I want it to look. I would rather a nicer, less harsh colour palette that isn't mostly black on white. I would also like to paginate the home page so not more than 4 posts are displayed at once, and get rid of the strang top bit of the page that just seems to repeat the website's title. Under the hood, there's also a lot of bloat that I don't need and should get rid of.
+
+These little things are what I care about, and you can see it throughout everything I designed this week, and even in the work I found most interesting. The details are what made the map of Scottish witches so interesting to me. I focussed on map markers and image resolution when making maps, and matching font combinations in my poster (Fjalla One, Futura and Baskerville, btw). The design of a visual shapes the narrative you're trying to convey, and so when representing digital history, to me, every detail matters.
