--- a/content/post/2020-06-14-week-six.md
+++ b/content/post/2020-06-14-week-six.md
@@ -8,7 +8,7 @@ date = "2020-06-14"
 #     "tech", "python", "digital-history", "R", "topic-modelling"
 # ]
 images = [
-"/images/weekfivejournal.png",
+"/images/weeksixjournal.png",
 ]
 +++
 
