--- a/content/post/2020-06-08-week-five.md
+++ b/content/post/2020-06-08-week-five.md
@@ -3,7 +3,7 @@ authors = [
     "Chantal Brousseau",
 ]
 title = "Week Five: Creation in Context"
-date = "2020-06-08s"
+date = "2020-06-08"
 # tags = [
 #     "tech", "python", "digital-history", "R", "topic-modelling"
 # ]
